--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
+    <head>
+        <title></title>
+    </head>
     <body>
         <header>
             <h1>Git</h1>
         </header>
+        <ul>
+            <li>Git이란?</li>
+            <li>버전</li>
+        </ul>
     </body>
 </html>
