--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
             <li>Git이란?</li>
             <li>버전</li>
         </ul>
+        <div>
+            git에 관한 내용
+        </div>
+        <div>
+            버전에 관한 내용
+        </div>
     </body>
 </html>
