--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <li>Git이란?</li>
             <li>버전</li>
         </ul>
-        <div>
+        <div class="box1">
             git에 관한 내용
         </div>
-        <div>
+        <div class="box2">
             버전에 관한 내용
         </div>
     </body>
