--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
             <h1>Git</h1>
         </header>
         <h2>git branch</h2>
+        <section>
+            branch
+        </section>
     </body>
 </html>
