동기화 추가

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
         <ul>
             <li>Git수업</li>
             <li>버전</li>
+            <li>동기화</li>
         </ul>
         <div class="box1">
             git에 관한 내용
         </div>
         <div class="box2">
             버전에 관한 내용
+        </div>
+        <div class="box3">
+            동기화에 관한 내용
         </div>
     </body>
 </html>
