--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li>Git수업</li>
             <li>버전</li>
             <li>동기화</li>
+            <li>push</li>
         </ul>
         <div class="box1">
             git에 관한 내용
@@ -23,6 +24,9 @@
         </div>
         <div class="box3">
             동기화에 관한 내용
+        </div>
+        <div class="box4">
+            push에 관한 내용
         </div>
     </body>
 </html>
